Update to workflow
Update to the workflow to include the assets directory.
Fix the folder for language

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,8 +118,10 @@ jobs:
             `# The files that will be included.` \
             module.json                          \
             README.md                            \
+            CHANGELOG.md                         \
             LICENSE                              \
             templates                            \
+            assets/                              \
             scripts/                             \
             styles/                              \
             packs/                               \
